Add personal content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Doron KG</title>
+    </head>
+    <body>
+        <pre>
+name:
+  en: Doron Kedem Goldman
+  he: דורון קדם גולדמן
+
+location: Tel Aviv, Israel
+
+email: <a href="mailto:doronkg@gmail.com">doronkg@gmail.com</a>
+
+about:
+  short: building new stuff | technology enthusiast | cloud engineer | <s>frontend expert</s>
+  long: >-
+    Hi, I'm Doron 👋 — a tech enthusiast and experienced engineering leader.
+    Passionate about guiding innovative teams, solving problems, and improving software delivery.
+    My background spans people growth, cloud infrastructure, ML engineering, and dad jokes.
+    Actively contributing to open source, with a strong belief in collaboration and continuous learning.
+
+work:
+  - company: Stealth
+    role: Co-Founder
+    highlights:
+      - Leading the cloud cost efficiency revolution
+      - Want to hear more? Reach me out!
+
+social:
+  github: <a href="https://github.com/doronkg">doronkg</a>
+  linkedin: <a href="https://www.linkedin.com/in/doronkg/">Doron Kedem Goldman</a>
+  stackoverflow: <a href="https://stackoverflow.com/users/20955005/doronkg">doronkg</a>
+
+projects:
+  - name: <a href="https://github.com/yonahd/kor">kor</a>
+    description: A Golang tool to discover unused Kubernetes resources ☸️
+
+talks:
+  # only recorded ones
+  - title: <a href="https://conf.splunk.com/watch/conf-online.html?search=PLA1723B&search.event=conf22">Monitoring as a Service</a>
+    event: Splunk .conf
+    year: 2022
+
+education:
+  - type: degree
+    field: B.Sc. Computer Science
+    school: The College of Management Academic Studies
+  - type: instructor's course
+    field: Capoeira & Martial Arts
+    school: Wingate Institute
+
+hobbies:
+  # in my free time, off keyboard
+  - film
+  - Capoeira
+  - <a href="https://www.linkedin.com/posts/activity-7063174014000599040-L5q4">Rubik's cube</a>
+
+languages:
+  hebrew: native
+  english: fluent
+  german: intermediate
+
+faq:
+  # frequently asked questions
+  - question: what's up with this website?
+    answer:
+      - straightforward, simple, cloud-native
+      - <a href="https://en.wikipedia.org/wiki/YAML">YAML</a> format, understandable by both humans and machines
+      - adapted from <a href="https://clarkevans.com/">Clark Evans</a> (YAML creator)
+  - question: who owns the kg ccTLD?
+    answer: Kyrgyzstan
+        </pre>
+    </body>
+</html>
